--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
-Flask>=2.0.0
-requests>=2.28.0
+selenium>=4.22.0
+webdriver-manager>=4.0.1
+requests>=2.31.0
 beautifulsoup4>=4.12.2
-scikit-learn>=1.2.0
-pandas>=1.5.0
-numpy>=1.23.0
-gunicorn>=20.1.0
+tenacity>=8.2.2
+python-dotenv>=1.0.1
+fake-useragent>=1.5.1
+lxml>=5.2.1
+urllib3>=2.2.1
